fixed alignment issues

--- a/Contact.css
+++ b/Contact.css
@@ -1,45 +1,96 @@
-body {
+body{
     height:100%;
     text-align: center; 
     background-repeat: no-repeat;
     background-size: cover;
     background-position: fixed-center;
-    background-image: url(landscapeBG.jpg);
+    background-image: url(PORT/images/large/DSCF0441.jpg);
     margin: auto;
+    width: 100%;
+    position:middle;
+}
 
+.caption{
+    position:fixed;
+    left:0;
+    top:20%;
+    width:100%;
+    color:#ddccee;
+    font-family: "futura";
+    text-align: center;
+}
+
+.caption span.border{
+    background-color: #111;
+    color:#fff;
+    padding: 8px;
+    letter-spacing: 10px;
+    font-size:30px;
+    font-weight: 425;
+    text-transform: uppercase;
+    opacity: .9;
+}
+
+
+.button{
+    background-color: #4dd2ff; 
+    border: solid 5px;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 200;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+}
+.button:hover{
+    opacity: 50%;
+    size = 3;
+    border-color: white; 
+    color: white; 
+    transform: scale(1.21);
 }
 .inputGroup{
     opacity:30%;
-    position:left;
-    max-height: 50%;
-    margin:auto;
+    position:center;
+    max-width: 24%;
 }
 
 .input[type=text]{
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: auto;
     box-sizing: border-box;
     border: none;
-    background-color: #3CBC8D;
-    color: white;
+    background-color: white;
+    color: black;
     font-size: 18px;
-    margin:auto;
+    opacity:1;
+    max-width:100%;
 }
 
 #backArrow{
     position:left;
 }
 
+#contact_form{
+    margin: auto;
+    width: 100%;
+    position:middle;
+    opacity:.95;
+}
+
 #message{
     font-family:futura;
-    background-color: #3CBC8D;
+    background-color: white;
     overflow:auto;
     resize:auto;
     width : 80%;
     color: white;
     font-size: 16px;
-    margin:auto;
 }
 
 .fa {
@@ -51,7 +102,7 @@ body {
     border-radius: 50%;
     transition-duration: 0.5s;
     transition-timing-function: ease;
-    position:bottom-left;
+    bottom:0;
 
 }
 .fa:hover {
@@ -79,3 +130,10 @@ body {
     background: #007bb5;
     color: white;
 }
+.mediaRow{
+    width:50%;
+    bottom: 0;
+    /*margin:auto;*/
+    position: fixed;
+    /*text-align: center;*/
+}   
